Use a maven proxy for integration tests to speed them up